# my_spotiPy

./: .env.example  .gitignore  Pipfile  pyproject.toml
notebooks/: like_all_from_playlist.ipynb  music_analysis.ipynb  sort_playlist.ipynb
