[tool.poetry]
name = "my-spotipy"
version = "0.1.0"
description = ""
authors = ["Ange Daumal <ange.daumal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"
jupyter = "^1.0.0"
spotipy = "^2.24.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
